--- a/frontpage.html
+++ b/frontpage.html
@@ -17,7 +17,7 @@
     <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="imagens/logo_ini.png" align="left" height="60px" width="165px" /></a>
+            <a href="/frontpage.html"><img src="//lh3.googleusercontent.com/lLYlGDCSgIQid7oLXMZm-tv9jPZufKIzjX7T7zT8bZCSqSnkeXwnCLO8RAH1uYgVjo5Y_A=s170" align="left" height="60px" width="165px" /></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
