--- a/frontpage.html
+++ b/frontpage.html
@@ -37,13 +37,13 @@
             <h1 class="espaçar">...............</h1>
         </div>
         <div id="image" style="float:left;">
-            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="imagens/20673.png" align="right" height="55" width="55" /></a>
+            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="//lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" align="right" height="55" width="55" /></a>
         </div>
     </header>
     <p><br><br><br><br></p>
     <main>
         <br>
-        <img src="imagens/logo_white.png">
+        <img src="//lh3.googleusercontent.com/eoELf2XwU5S8ePWrVeE4naj5WcVc73lpPZsf2dAhXv8H82MNelYKnq0_VeIbF2uKhkLGcp8=s170">
         <h1>Temos serviço de pequeno almoço, servimos cocktails, tostas, hamburgers, tapas. <br>Muita diversão num bom ambiente<br><br></h1>
     </main>
     <fundo>
