--- a/menu.html
+++ b/menu.html
@@ -13,32 +13,32 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 
-<header>
+ <header>
 
-    <div id="image" style="float:left;">
-        <a href="/frontpage.html"><img src="imagens/logo_ini.png" align="left" height="60" width="165" /></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">.........</h1>
-    </div>
+        <div id="image" style="float:left;">
+            <a href="/frontpage.html"><img src="//lh3.googleusercontent.com/lLYlGDCSgIQid7oLXMZm-tv9jPZufKIzjX7T7zT8bZCSqSnkeXwnCLO8RAH1uYgVjo5Y_A=s170" align="left" height="60px" width="165px" /></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">.........</h1>
+        </div>
 
-    <div id="text" style="float: left;">
-        <a href="/menu.html" style="text-decoration:none">
-            <button class="botão ">Menu</button></div>
-    </a>
-    <div id="text " style="float: left; ">
-        <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">...............</h1>
-    </div>
-    <div id="image" style="float:left;">
-        <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="imagens/20673.png" align="right" height="55" width="55" /></a>
-    </div>
-</header>
+        <div id="text" style="float: left;">
+            <a href="/menu.html" style="text-decoration:none">
+                <button class="botão ">Menu</button></div>
+        </a>
+        <div id="text " style="float: left; ">
+            <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">...............</h1>
+        </div>
+        <div id="image" style="float:left;">
+            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="//lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" align="right" height="55" width="55" /></a>
+        </div>
+    </header>
 <p><br><br><br><br></p>
 <main>
 
