--- a/frontpage.html
+++ b/frontpage.html
@@ -9,7 +9,7 @@
 
 <head>
     <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" href="application.css">
+    <link rel="stylesheet" href="https://gbarradas.github.io/application.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 
