--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 
 <head>
     <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 
