--- a/menu.html
+++ b/menu.html
@@ -96,3 +96,256 @@
     <hr class="barra">
 </main>
 </body>
+
+
+body {
+    margin: 5%;
+    background: url(//lh3.googleusercontent.com/ebqljRkxTIq8mIF1_eTKMHsT0wfUeSNBjSN20MBG-AWCRqYyzGT1Lm0qvZW6WsLaZ6GuRw=s85);
+    font-family: 'Lato';
+    line-height: 1.5;
+}
+
+.barra {
+    border-color: rgb(0, 0, 0);
+    border-left: 2px;
+    width: 100%;
+}
+
+.espaçar {
+    color: white;
+}
+
+.facebook {
+    right: 5px;
+    top: 3px;
+    margin: 5px 15px 5px 5px;
+    display: inline;
+}
+
+header {
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    height: 10%;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+}
+
+
+/*  GRID OF THREE  */
+
+.span_3_of_3 {
+    width: 100%;
+    text-align: left;
+}
+
+.span_2_of_3 {
+    width: 65%;
+    text-align: left;
+}
+
+.span_1_of_3 {
+    width: 30%;
+    text-align: left;
+}
+
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+    .col {
+        margin: 1% 0 1% 0%;
+    }
+    .span_3_of_3,
+    .span_2_of_3,
+    .span_1_of_3 {
+        width: 100%;
+    }
+}
+
+
+/*  SECTIONS  */
+
+.section {
+    clear: both;
+    padding: 0px;
+    margin: 0px;
+}
+
+
+/*  COLUMN SETUP  */
+
+.col {
+    display: block;
+    float: left;
+    margin: 1% 0 1% 5%;
+}
+
+.col:first-child {
+    margin-left: 0;
+}
+
+
+/*  GROUPING  */
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+
+ul {
+    list-style-type: circle;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    zoom: 1;
+    /* For IE 6/7 */
+}
+
+.barra {
+    color: black;
+    padding: auto;
+    background-color: black;
+    border: 2px inset black;
+}
+
+.botão {
+    color: black;
+    display: inline;
+    text-align: center;
+    width: 350px;
+    height: 45px;
+    border: 4px inset #000000;
+    padding: 5px, 20px;
+    border-radius: 25px;
+    margin: 10px 15px 5px 5px;
+    background: white;
+}
+
+.foto {
+    border: 2px inset transparent;
+}
+
+.linha {
+    border-left: 3px inset black;
+    height: 100px;
+    width: 50%;
+}
+
+.end {
+    padding: 5px 40px;
+    border-radius: 20px;
+    margin: 10%;
+    filter: alpha(opacity=60);
+    background-image: url("//lh3.googleusercontent.com/3ywrNWNLGqmlxUc3G555psOpcLWPVzNN3kv0uUr5-bikoTo-fX810xMRML5Qg9LQ1HDTyQ=s113");
+    background-color: #00000061;
+    background-position-y: -580px;
+    background-position-x: -1050px;
+    color: black;
+}
+
+.endt {
+    padding: 5px 20px;
+    background-color: #ffffff9c;
+    border-radius: 20px;
+    margin: 10%;
+    color: rgb(5, 5, 5);
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+
+main {
+    margin: 5%;
+    color: black;
+    background: #ffffffde;
+    padding: 5px 40px;
+    margin-top: 20px;
+    border-radius: 30px;
+    text-align: center;
+}
+
+ementa {
+    align-tracks: center;
+    text-align: center;
+    color: black;
+    background: white;
+    padding: 5px 40px;
+    margin-top: 20px;
+    border-radius: 30px;
+    width: 350px;
+    height: 45px;
+}
+
+
+/*  GRID OF TWO  */
+
+.span_2_of_2 {
+    width: 100%;
+    text-align: left;
+}
+
+.span_1_of_2 {
+    width: 48.5%;
+    text-align: left;
+}
+
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+    .col {
+        margin: 1% 0 1% 0%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .span_2_of_2,
+    .span_1_of_2 {
+        width: 100%;
+    }
+}
+
+
+/*  SECTIONS  */
+
+.section {
+    clear: both;
+    padding: 0px;
+    margin: 0px;
+}
+
+
+/*  COLUMN SETUP  */
+
+.col {
+    display: block;
+    float: left;
+    margin: 1% 0 1% 3%;
+}
+
+.col:first-child {
+    margin-left: 0;
+}
+
+
+/*  GROUPING  */
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    zoom: 1;
+    /* For IE 6/7 */
+}
