--- a/frontpage.html
+++ b/frontpage.html
@@ -17,7 +17,7 @@
     <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="//lh3.googleusercontent.com/lLYlGDCSgIQid7oLXMZm-tv9jPZufKIzjX7T7zT8bZCSqSnkeXwnCLO8RAH1uYgVjo5Y_A=s170" align="left" height="60px" width="165px" /></a>
+            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/taSXi8dFotLjwnxW-twn_5QO4q8EuvBwKzRfBWKJSc7by1J8pJxDoXp5gLmPsu9ztQ0ZpUsapmbYXha9WOyODii7yeMg35fRsFilm3pKA0fP7R44QZjiyTpHIX36GHO8ui1xicSJzNTxVPEce_f-VC_7tGnxTdsmdINSBjWi_x_GnsZj_-L9ExURykFzO6Pr09PtRM6ANhoHBAPladxKguzJaGCYDHwXjw7ZNL3bR38rNY90O5R9hGq11QC7kzKQByzd4URocXfsQEfuV9gMylRouYQPvigVjBJ0sRH4V6ksQcYkrmhCXScUowSC0RTNq3aSU33DkC1kNYpI_VTnmWxkK4x-z1k8lDh5ZqNxlm2jnMeW5xYgggH4cFL_CFq7orUzOwZDBxMYqqcLIxvAZ26cq6_CSN5eCRKCnHEt-bb2I20hYyCOohHxiH_Ha_vQ7QdH3tL4CvrEuoEvjYYcRoiiE2RW1UpbjDNUAzymBUCHs7iPU1cwB6eCEquapnDs35Btd7QfOx5icka2MYJsu1EzkFG_UaGrZpeskO0nirkvt67KA3QLshYToMu2uWCg3K7PDSMV48Asgkb-HtDadKYNNOJFo3WlptGFHeZVoMwPeIDMiF9x_xdWUmhUrm0LVuX9T3K9EydJKpcK460RXNO1QcTH_1AaHhmhqp_1bCO2sP4hobzZZEe79tClf5RCCrKS0yfzbJk5mYY7Xir-jXY=w650-h290-no?authuser=0" /></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
