--- a/Localização.html
+++ b/Localização.html
@@ -7,37 +7,32 @@
 <meta name="author" content="Gonçalo Barradas">
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 
-<head>
-    <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-</head>
-<header>
+  <header>
 
-    <div id="image" style="float:left;">
-        <a href="/frontpage.html"><img src="imagens/logo_ini.png" align="left" height="60" width="165" /></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">.........</h1>
-    </div>
+        <div id="image" style="float:left;">
+            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">.........</h1>
+        </div>
 
-    <div id="text" style="float: left;">
-        <a href="/menu.html" style="text-decoration:none">
-            <button class="botão ">Menu</button></div>
-    </a>
-    <div id="text " style="float: left; ">
-        <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">...............</h1>
-    </div>
-    <div id="image" style="float:left;">
-        <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="imagens/20673.png" align="right" height="55" width="55" /></a>
-    </div>
-</header>
+        <div id="text" style="float: left;">
+            <a href="/menu.html" style="text-decoration:none">
+                <button class="botão ">Menu</button></div>
+        </a>
+        <div id="text " style="float: left; ">
+            <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">...............</h1>
+        </div>
+        <div id="image" style="float:left;">
+            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="//lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" align="right" height="55" width="55" /></a>
+        </div>
+    </header>
 <br><br><br><br>
 
 <body>
