--- a/fotos.html
+++ b/fotos.html
@@ -7,48 +7,43 @@
 <meta name="author" content="Gonçalo Barradas">
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 
-<head>
-    <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-</head>
-<header>
+  <header>
 
-    <div id="image" style="float:left;">
-        <a href="/frontpage.html"><img src="imagens/logo_ini.png" align="left" height="60" width="165" /></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">.........</h1>
-    </div>
+        <div id="image" style="float:left;">
+            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">.........</h1>
+        </div>
 
-    <div id="text" style="float: left;">
-        <a href="/menu.html" style="text-decoration:none">
-            <button class="botão ">Menu</button></div>
-    </a>
-    <div id="text " style="float: left; ">
-        <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
-    </div>
-    <div id="text" style="float: left;">
-        <h1 class="espaçar">...............</h1>
-    </div>
-    <div id="image" style="float:left;">
-        <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="imagens/20673.png" align="right" height="55" width="55" /></a>
-    </div>
-</header>
+        <div id="text" style="float: left;">
+            <a href="/menu.html" style="text-decoration:none">
+                <button class="botão ">Menu</button></div>
+        </a>
+        <div id="text " style="float: left; ">
+            <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
+        </div>
+        <div id="text" style="float: left;">
+            <h1 class="espaçar">...............</h1>
+        </div>
+        <div id="image" style="float:left;">
+            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="//lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" align="right" height="55" width="55" /></a>
+        </div>
+    </header>
 <br><br><br><br>
 
 <body>
     <main><br><br>
-        <img src="imagens/fotoespaço/3.jpg" class="foto" width="360" height="270">
-        <img src="imagens/logo_ini.png" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/5.jpg" class="foto" width="360" height="270">
-        <video src="imagens/fotoespaço/videoapre.mp4" class="video" muted="true" autoplay="autoplay" controls>Video de Apresentação</video>
-        <img src="imagens/fotoespaço/1.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/2.jpg" class="fotos" width="360" height="270">
-        <img src="imagens/fotoespaço/4.jpg" class="foto" width="360" height="270">
+        <img src="https://lh3.googleusercontent.com/oCNH5Li-PtUCP9Ev9OZDGGB4lqYUaxvbX6YcPXeWjoRqt2d3BW7rA7c6kldHxbsp0PN3I_qhVW_W-anieMQUt_ZBN_1heYugKLFEK8KOQQ-N-exELptnkATCAd6jSK6mCoQ87t10SSgYRlNY1IvervBQFhj9RM6MlH4nME6u8pRe7nUPR24DbCN9ecEdm1L8il5mUMA2Q6esAsjYx7rhk1-MYymf7UFc0zXE3Wx7aK2a_vb1yxBsmJuMrTYbWF67Gj2dQ8EdqjoPK6QDfwc0qJjEhZmI_rDZvtBW_Ot9-_BN8dWYWPrWHRF7iycWr223QOkmipaxm27dT2CHjgbHHjQ30xaoKtB5BUpu77i4XnQ2hHI1mW-k1BrOLqqklWgcPu6ssTTCVw1Ofe_fpNwBOJiOJwqUprdLlI_DuV_Z4pCZPq-gwe68nZLqnGflOhKDAZxjnwSNpcpr08qoBqtwostMqyBVic7lMBdJcSwgWE-5WHm-js40vhhb_MRbjFqT-8k9XirJkV9LH8EElIfOCHfr5Qgrw5ifIOhi839sM0WN6yhoBnkyfKmaxF7l931QQjVGQe5Y8tD_6avoi5_bHKKo9pFHzSTBMf_jPRIZslGrwXCsUot_6d2f3Ic7GOrK3AyE1Vh7qWKrgXul9O-e-r4Ht24JMdlB2ljGiO91h0uetTqCUkQpBO1YMjdAUaAHHlMhZX4-QhMaEa14ebS7KLQ=w1204-h903-no?authuser=0" class="foto" width="360" height="270">
+        <img src="https://lh3.googleusercontent.com/o913jeGwCnF3T3NRdUNmEuX3RHs3yWbUUlwrWDMUnuat1z5OT6aLojSUIpVppuqFpGmNDAuY-bnODbk3P-aepzqchmpUUlwqhl-z0K5Hi0s13IYCcY9EfYHlqdcvCM7W9z6Es93DQQpJkJP9qXkE7xLjiZPEiEo8PKxWsx240UzriVYguM9DTi6BkxZFIHNUfErgS_bK1ZSZ0UN9bUtsSquzYTsSsn53sqa2KtxKQOpjW8_YpCOGZHwbkOF4wDtYXeCw6kZ0VLgGKrudANZKjHYsKVxzat7mJzMLEVZpCITm6exY_v-hHtfsyV2zxPQck4pQz5lCBS2mup9UBuQwhfxY4FWxTJhWnu6cTaNLh_4LGO7lle67NqRf2PAP9Csg_Jy_z2MLM0K3EYmlj-5ONT4JQXmUzMvg44dXvE8KufTvK2AN3bglfjLGhZiIhfaa4Rjh05Z10V10QTp2l7diZmbT8yIWAQu9eDkCZssUXWuJC5pYXZi3Dm7pPAb2HCtNYMSq9eXYCoOmCxpoqMAxmSx5Lh3ls_xJ_IekNwzLZCEmA_dyKCCpFPR9tnmvuzQGkiSv2TflZlQh9fKYEAyZkmh3AR-4HmkmLuYKPXs62y-41xlFRC15ekA2EvJ5_1pQIYoeKivTTePUR5uptBlJh3diob_15D3-2j9JJTDdytrSy1gnKpn86PdBIZ2luguPJLGIz_KqCZ9d3jJXy1fYL6o=w650-h290-no?authuser=0" class="foto" width="360" height="270">
+        <img src="https://lh3.googleusercontent.com/PS9CqwKC1U-ohB3VgBU19sAxWxXmrbUQ7jqsp7r2o-v98KgUM-SMhGnBT5TEviO7e2fO96AIQE-UPaeem2rhdKRBl-3A4JIteUe3VZq4VVrvCXhS_v8mSoFzqArMbwLVYBbBbMFranZkF7Ljnir6Dw4UfZ-T-QmFkoNEMxh_TlKBnRC-wvA2nPsf1QNc-IfZ13eNUTSwQ5zrmVlhKAXuP7h2D0jNwBxBiz8_VXRtc5O6lvXCSt_NJmGs4nJKwTs6KXvxb3bFq_ObXUC994qPQM7eogifAWuB3bQy7kUzdTkEiAmNHhlfKVP-sHFFS7oLD4axmzQmXEa4zE3QSMogXpA09jGrdhljIJe-N5lxX2SddUZ5EOY368-p27zK_tBlL4pcuV6DtyhexVYFpGQTmCLIm17nVLOK5m6EVzcSpYcHkUJsBQuOBOCiop6sV8D73KkR4kCP7NMNKk2_2-cliDTKrcRV30NDNqpr_kfWYbIoOutKkYKYxIEpdNfa-CrrGlIRN1XO_zOJcvtg1pdprOR-hopKrXsms92M2dxNFZZXg6LXV8ymTKVaj3M4mFd52KALbm09IYKohJ4ZIP-uVzZTvLJPknZhskpwF0hdO3eg8waDuVG38WR-ruNhb25i-IS_sXe1BKYOaXfM63OYFfHTz8CBJ1EzGZz_BRRhBWIZDPcwYuDx7pQGYz1nUHA4hLQuT9tvPMPi6MRjqJrBv1A=w1204-h903-no?authuser=0" class="foto" width="360" height="270">
+        <video src="https://youtube.googleapis.com/embed/?autohide=1&ps=picasaweb&use_native_controls=0&enablecastapi=0&color=white&mute=false&enablejsapi=1&origin=https%3A%2F%2Fphotos.google.com&widgetid=5" class="video" muted="true" autoplay="autoplay" controls>Video de Apresentação</video>
+        <img src="https://lh3.googleusercontent.com/fhxPtCqBqDVvWGMY65AaodIuVwAZGvYMqN7Gw4JLYD1Wwmo7wuOS2VscymY9pHQ_-PUf8ThSoQkYWvZAXzjKkGKy3YPFFThf1Qr1pgyYUXvsPJ7nyhvMLerSYVl_LjFdWDbXk82PqcpM61K2G9xPzhBAfwL40o_C8e727qe4ucEsEH_wzubj22Rbzhea2P4Xa9AY2RQwHxtkpH32phtAR0BGxD8ujrZaQCli_B74n4dNtsQ_AytH0gctpPJAsCNRMnhEVf3Jz-JLKOQ2YyLURVhDqLIvyberXWdka4DiSroBDIMo0Xp35xN4g0wFrj7eZvrNzSRBFwpMFwRqQzylEKaNvuXO6PoivO_g-nshdaq3RI8c3XPROEzVJQ-97UDr1pcfCM9fFg_3jzfFAO9HdPbE4aJtiRtcfRALpJunPH2FlC240HtdgqBs71rgxn47yB8tTK57R0c7Cb5v0OuqOriw3QciPMGLdyufBBb7f6wTnkk-ptyaYJzu6Ajnj7O2cdA_JrnamQkdnTzc-CoUqt2KwpK35T-mPylSiSE95F1QeBloAprHVWyD8q9tcTMf2bkQuT1VlZXaywfjQvBdvillBHxNuaClvBBicLPUOJob1fBu-jz-1or7iNfc8RkgV4UG19Yx9sCtLZbBje7W5xU63ZsgUjZ2YFUFz5qtFH6j17r3AotsykXJEFMnE0Yt1RapQwfzYM8mU4PDkFemf5A=w678-h903-no?authuser=0" class="foto" width="360" height="270">
+        <img src="https://lh3.googleusercontent.com/yNARgQ4H6EzSXJd_T5p4jOo1TIa6N_543LO4P5kNo9G18qv8CLpTGLa3Tsi9FR6crBPK1IJrThxFpJe4Ccr7vb4WmCCSM9SpCN_gSxkEiOYF0UBeW-GFMeFTtDhnDik5JA0wOnC9KtbRqddOqR6-JYFrZEv20wiCMNw6DaDpThSZbO_kTdoRUvllGpvLp4lu88jxpXqNJE1QOvc40KBQED6bdBeH5jcluhX3LXGJWJQ8nqPYNvGgLGYjn3lNpjej86HwowZkxIzdAvUdiXki4SC6z5u0KF7Lvbwo_1LZPh1bsWTwYtMmxmPsa1Mk2kEH4UhRpcMFASZUswuo-ZPzQcthn-yteP36eXcehLymytUnNhPc7HqOmHzVUq5-GGndEX2QjT2uXzUbme0omhpFRWozYR2Uw9TFovjXr1lyZBSDOyRxejBcBfnN0Ckrgoqec4NMuHCYTgAmZtsGgTRwNyds921mYECPHNgiV_4YIGvMOU9jNX5rELFB8enG-5Vq_GsaUp3dIJXQL7ZhMdUrgWcyDMVMArE7xvzLH_fQwYECO9nGmG2u-vqrM5sd7tWh9BqEPt2BqOMNguBcCi3tGGtFUEyIh1yu1swef-I2OZ9Jb6Kg8JDo-Ney76PP9y5FeXxhIVrLntSYf_BdesiIwF38mlE5SufxTiy3CqZJ3O0ht2gB-aGLdNwpGCpZNUVBUbQCxoARm3Wg-gCOrUmqvU4=w678-h903-no?authuser=0" class="fotos" width="360" height="270">
+        <img src="https://lh3.googleusercontent.com/MD7xLpRkcY55Gwbwi5T5XrHoyVYJ0NQUElP3C-hcPpcD7e1TXPr7F4gl1Zmn97oFKScs1jwdUHRSwd_7lwpZxSl8gtHwegQHWFeYHm20QTSw-MT8dHEot8-QP-7viK3Zk5OOr9TtShN97un4ARoY7MzTkk7YRDKVsW09CqG2ooZTsWH1Q0IW_voAHLMbNN0U0XZ-AmPHPPxVoXGEcmeqkruNNJYf9s57dUEUd7StLbAMEtx_aF7cdrkjVAXqAHs8ew8Nsh6X_8ImqupkDunNXuL3lx92RTlqVVY2Saja-zzu4c3lK3kpo29dKRSrtk--ieBh9StSoEuMRJnxE9NM1CLOHttQQoAfkCJCpkW06Xae2YjnvZEVE90VSQW9vfjY5ewSLBYtvZaLCSI5rgyOOTy2dldOpYg0HV0ud39ycoZQXbx20-esD6mzKweXTBVYxqCvZn2pmi6I3bUo4ZGoq7XskXQaZbQQC1q3dmarui1LibGoFE_BY0856JfQQ3xle2L4SV0Het30Xw-URT5iWCjQ1kqROlxGYrr7xOrLxB_G0PtctOeC_mC3hoI2_WDvVvSWeloi0bwjHgMsFsu7GesKb80UC-Z4rEXiXfI8GeHF1EUpo2XbVhZdtkzEqIVEbLY_rWZoBuE3i-hqUFAtHwL7Rvi2r9BOUAqkuPZ8L5WdsMFi_5y-hbKqRJaHhK5vNpRtgFHy5RD0DNdf4IokuYs=w1080-h810-no?authuser=0" class="foto" width="360" height="270">
 
         <br><br><br>
     </main>
