--- a/Localização.html
+++ b/Localização.html
@@ -8,7 +8,7 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 <head>
     <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
   <header>
