--- a/fotos.html
+++ b/fotos.html
@@ -6,7 +6,11 @@
 <link rel="icon" href="imagens/logopeq.png">
 <meta name="author" content="Gonçalo Barradas">
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
-
+<head>
+    <title>Boémio Bar & Tapas</title>
+    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+</head>
   <header>
 
         <div id="image" style="float:left;">
