--- a/frontpage.html
+++ b/frontpage.html
@@ -47,8 +47,10 @@
         <h1>Temos serviço de pequeno almoço, servimos cocktails, tostas, hamburgers, tapas. <br>Muita diversão num bom ambiente<br><br></h1>
     </main>
     <main>
-        <h1>So Hoje na compra de 2 Cocktaisl ofercemos o 3º</h1>
-        <p>Oferta valida no dia 04/07/2021</p>
+        <div class="ndt">
+            <h1>So Hoje na compra de 2 Cocktaisl ofercemos o 3º</h1>
+            <p>Oferta valida no dia 04/07/2021</p>
+        </div>
     </main>
     <fundo>
 
