--- a/Localização.html
+++ b/Localização.html
@@ -46,7 +46,7 @@
             <div class="col span_1_of_2">
                 <h1>Contactos</h1>
                 <div>
-                    <a href="tel: +351 962898982" <p></p><img src="https://www.freepnglogos.com/uploads/logo-telefone-png/icone-telefone-png-download-3.png" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
+                    <a href="tel: +351 962898982" <p></p><img src="https://i.pinimg.com/originals/e1/ea/24/e1ea24a7d8bc39064780531cd1a9718b.jpg" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
                     </a>
                     <a href="mailto:joaopaulo@boemio.pt" <p></p><img src="https://lh3.googleusercontent.com/F_Ui2IQGRdBThXZlW7KnTxMmaOZJm_3kvd5OFT_J7TwEYmDUO3GibapgtM4TiL9KRTg-IhR9SZXWJcgz9slpkf_Iczt4hbAcRZPsMNQGYE648HWfzViVJ-yxLlXdkqKcQ1nVUkZs9xM7TWtDGtQY3AmpriYUytu6bnMxvtBaHWQsOqJ960Q7O7yy2QEDI5xXd7YWxlV-LBC1wAE0amOHivXrPfy8Q8W_xLkFiwqLcZXj6tzh2QqmRVSnHFn2llJZbG--UoVSV20fSmWiQsskDiGR9_vxv_RRC9xJndwVqNIHZY1UZ0lvubpxZoJaSp24tLLV3VhSpsyUl9rZ3c6sjqX-3Wn_p8jOQ2z1IdgHNGkuTEt1-1xYuCYu6ece4Gi85tMbYbkcnYMfJcjEL_6_PrSVvG-6go_eLu0tgg_fBfR0njuyPe2Y8tL94itESElYBwsX8OjEjyNOpFDRkdZCPOpCEz1n7JB_qepZhx3QUJO_y0ZGn-a8G0CIuioHeIaP7DfrWHV91IHzQw9VcekBaiIs1mGXxypgpG__4GlGFJpXXeHjUuhKkmhzoK78rgcDzDVYFxKgeZo59Y42ne3NoV5lbbUXfq3VbuGp3cZnOrFYgMSWpxa6DHOTLgffN_bmac4J_9P-_oM2wO9--7U0AWeXvfn0qsrzik3OS6ANcbgiUpIymT7ymc_HlQBo1VHAc7EfoIh4YcI-Oic7BGmwMHY=w434-h281-no?authuser=0" height="25px" style="margin-right: 15px;" width="30px">joaopaulo@boemio.pt</p>
                     </a>
