--- a/frontpage.html
+++ b/frontpage.html
@@ -3,6 +3,9 @@
 
 
 </html>
+1
+2
+<link rel="sortcut icon" href="https://lh3.googleusercontent.com/MWrb1JC6LVYaG4mivR4MfpbJ0pYJ7pkWq_rG39SyNqLFTTKgOmCdEyBz3jDTpIymfLB9ofW7FvwzqO0Gjqt8J1wOqJ8GzMrwe0Xz-swFN6L-56nE-Fwz0mSG38pIUtLfLmpAXFBzbr4m_5OWcVegDKaNso2YJUsroJS59CATx_CsppQNq6o2-pkN7AfAfQST_B0zw9OTB_Yw3PLkzAnfAG0T7Sjvy8enhP-FfHKNcVKeB0j7cIJha0SsKjFzm28q391bDVfDikMQveD87RARPbitpX8cxc_GquNMX0q7HIcNnRiHy145kpjOmDiLpx8D1dS4J05Y8qBS4767p36iooGsew7N10KJCPFbM6oGi0lbnpzw3bYgpt6le_KwWn-hfJPMV1WvxHk7CwvxF1f4cPNuCuxB9HbwrEXH7GVJT8xY6buNItdk0kv5Facw3XY63mHfqRzkYZvlsIoLqWfYk8poahMH1Nw6ccDGb50plhW9mZa2RtqGcHnCBc9VocJQ8-NiaRpEVNLY1BiUycOH6G84-u2Te2PxDVuuPd5WbKaBwdTzhZk-eO7v68uufkBcXjBEQG8rRY7D65RE96iExb3WhBm50OIpIFNoOaBDgjXWqFy4wh-PdyIhY2hO5FsK6v0Hw83Fg_h5lOeEk0Z8jLVe-Hz6JTjiTalk_R_ckWgua_-mQeS1EAJBPzoeiiTV025wsINiMGhmdd7uGe6-_Cg=s283-no?authuser=0" type="image/x-icon" />;
 <link rel="icon" href="imagens/logopeq.png">
 <meta name="author" content="Gonçalo Barradas">
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
