--- a/menu.html
+++ b/menu.html
@@ -63,6 +63,11 @@
             <h1>Almoço</h1>
             <ul>
                 <li>Hamburguers</li>
+                <ul>
+                    <li>Bacon</li>
+                    <li>Queijo</li>
+                    <li>Dupla carne</li>
+                </ul>
                 <li></li>
             </ul>
         </div>
