--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 
 <head>
-    <title>Boémio/Menu</title>
+    <title>Boémio Bar & Tapas</title>
     <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
