--- a/fotos.html
+++ b/fotos.html
@@ -41,18 +41,18 @@
 
 <body>
     <main><br><br>
-        <img src="https://lh3.googleusercontent.com/oCNH5Li-PtUCP9Ev9OZDGGB4lqYUaxvbX6YcPXeWjoRqt2d3BW7rA7c6kldHxbsp0PN3I_qhVW_W-anieMQUt_ZBN_1heYugKLFEK8KOQQ-N-exELptnkATCAd6jSK6mCoQ87t10SSgYRlNY1IvervBQFhj9RM6MlH4nME6u8pRe7nUPR24DbCN9ecEdm1L8il5mUMA2Q6esAsjYx7rhk1-MYymf7UFc0zXE3Wx7aK2a_vb1yxBsmJuMrTYbWF67Gj2dQ8EdqjoPK6QDfwc0qJjEhZmI_rDZvtBW_Ot9-_BN8dWYWPrWHRF7iycWr223QOkmipaxm27dT2CHjgbHHjQ30xaoKtB5BUpu77i4XnQ2hHI1mW-k1BrOLqqklWgcPu6ssTTCVw1Ofe_fpNwBOJiOJwqUprdLlI_DuV_Z4pCZPq-gwe68nZLqnGflOhKDAZxjnwSNpcpr08qoBqtwostMqyBVic7lMBdJcSwgWE-5WHm-js40vhhb_MRbjFqT-8k9XirJkV9LH8EElIfOCHfr5Qgrw5ifIOhi839sM0WN6yhoBnkyfKmaxF7l931QQjVGQe5Y8tD_6avoi5_bHKKo9pFHzSTBMf_jPRIZslGrwXCsUot_6d2f3Ic7GOrK3AyE1Vh7qWKrgXul9O-e-r4Ht24JMdlB2ljGiO91h0uetTqCUkQpBO1YMjdAUaAHHlMhZX4-QhMaEa14ebS7KLQ=w1204-h903-no?authuser=0" class="foto" width="360" height="270">
-        <img src="https://lh3.googleusercontent.com/o913jeGwCnF3T3NRdUNmEuX3RHs3yWbUUlwrWDMUnuat1z5OT6aLojSUIpVppuqFpGmNDAuY-bnODbk3P-aepzqchmpUUlwqhl-z0K5Hi0s13IYCcY9EfYHlqdcvCM7W9z6Es93DQQpJkJP9qXkE7xLjiZPEiEo8PKxWsx240UzriVYguM9DTi6BkxZFIHNUfErgS_bK1ZSZ0UN9bUtsSquzYTsSsn53sqa2KtxKQOpjW8_YpCOGZHwbkOF4wDtYXeCw6kZ0VLgGKrudANZKjHYsKVxzat7mJzMLEVZpCITm6exY_v-hHtfsyV2zxPQck4pQz5lCBS2mup9UBuQwhfxY4FWxTJhWnu6cTaNLh_4LGO7lle67NqRf2PAP9Csg_Jy_z2MLM0K3EYmlj-5ONT4JQXmUzMvg44dXvE8KufTvK2AN3bglfjLGhZiIhfaa4Rjh05Z10V10QTp2l7diZmbT8yIWAQu9eDkCZssUXWuJC5pYXZi3Dm7pPAb2HCtNYMSq9eXYCoOmCxpoqMAxmSx5Lh3ls_xJ_IekNwzLZCEmA_dyKCCpFPR9tnmvuzQGkiSv2TflZlQh9fKYEAyZkmh3AR-4HmkmLuYKPXs62y-41xlFRC15ekA2EvJ5_1pQIYoeKivTTePUR5uptBlJh3diob_15D3-2j9JJTDdytrSy1gnKpn86PdBIZ2luguPJLGIz_KqCZ9d3jJXy1fYL6o=w650-h290-no?authuser=0" class="foto" width="360" height="270">
-        <img src="https://lh3.googleusercontent.com/PS9CqwKC1U-ohB3VgBU19sAxWxXmrbUQ7jqsp7r2o-v98KgUM-SMhGnBT5TEviO7e2fO96AIQE-UPaeem2rhdKRBl-3A4JIteUe3VZq4VVrvCXhS_v8mSoFzqArMbwLVYBbBbMFranZkF7Ljnir6Dw4UfZ-T-QmFkoNEMxh_TlKBnRC-wvA2nPsf1QNc-IfZ13eNUTSwQ5zrmVlhKAXuP7h2D0jNwBxBiz8_VXRtc5O6lvXCSt_NJmGs4nJKwTs6KXvxb3bFq_ObXUC994qPQM7eogifAWuB3bQy7kUzdTkEiAmNHhlfKVP-sHFFS7oLD4axmzQmXEa4zE3QSMogXpA09jGrdhljIJe-N5lxX2SddUZ5EOY368-p27zK_tBlL4pcuV6DtyhexVYFpGQTmCLIm17nVLOK5m6EVzcSpYcHkUJsBQuOBOCiop6sV8D73KkR4kCP7NMNKk2_2-cliDTKrcRV30NDNqpr_kfWYbIoOutKkYKYxIEpdNfa-CrrGlIRN1XO_zOJcvtg1pdprOR-hopKrXsms92M2dxNFZZXg6LXV8ymTKVaj3M4mFd52KALbm09IYKohJ4ZIP-uVzZTvLJPknZhskpwF0hdO3eg8waDuVG38WR-ruNhb25i-IS_sXe1BKYOaXfM63OYFfHTz8CBJ1EzGZz_BRRhBWIZDPcwYuDx7pQGYz1nUHA4hLQuT9tvPMPi6MRjqJrBv1A=w1204-h903-no?authuser=0" class="foto" width="360" height="270"><br>
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/3.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo-ini.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/5.jpg" class="foto" width="360" height="270"><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AaffwQZQjC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-        <img src="imagens/fotoespaço/9.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/2.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/8.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/7.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/6.jpg" class="foto" width="360" height="270">
-        <img src="/Imagens/fotoespaço/4.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/10.jpg" class="foto" width="360" height="270">
-        <img src="imagens/fotoespaço/11.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/9.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/2.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/8.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/7.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/6.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/4.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/10.jpg" class="foto" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/11.jpg" class="foto" width="360" height="270">
 
 
         <br><br><br>
