--- a/frontpage.html
+++ b/frontpage.html
@@ -10,8 +10,23 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 
 <head>
-    <link rel="fluid-icon" href="https://lh3.googleusercontent.com/MWrb1JC6LVYaG4mivR4MfpbJ0pYJ7pkWq_rG39SyNqLFTTKgOmCdEyBz3jDTpIymfLB9ofW7FvwzqO0Gjqt8J1wOqJ8GzMrwe0Xz-swFN6L-56nE-Fwz0mSG38pIUtLfLmpAXFBzbr4m_5OWcVegDKaNso2YJUsroJS59CATx_CsppQNq6o2-pkN7AfAfQST_B0zw9OTB_Yw3PLkzAnfAG0T7Sjvy8enhP-FfHKNcVKeB0j7cIJha0SsKjFzm28q391bDVfDikMQveD87RARPbitpX8cxc_GquNMX0q7HIcNnRiHy145kpjOmDiLpx8D1dS4J05Y8qBS4767p36iooGsew7N10KJCPFbM6oGi0lbnpzw3bYgpt6le_KwWn-hfJPMV1WvxHk7CwvxF1f4cPNuCuxB9HbwrEXH7GVJT8xY6buNItdk0kv5Facw3XY63mHfqRzkYZvlsIoLqWfYk8poahMH1Nw6ccDGb50plhW9mZa2RtqGcHnCBc9VocJQ8-NiaRpEVNLY1BiUycOH6G84-u2Te2PxDVuuPd5WbKaBwdTzhZk-eO7v68uufkBcXjBEQG8rRY7D65RE96iExb3WhBm50OIpIFNoOaBDgjXWqFy4wh-PdyIhY2hO5FsK6v0Hw83Fg_h5lOeEk0Z8jLVe-Hz6JTjiTalk_R_ckWgua_-mQeS1EAJBPzoeiiTV025wsINiMGhmdd7uGe6-_Cg=s283-no?authuser=0" title="GitHub">
-    <title>Boémio Bar & Tapas</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://gbarradas.github.io/application.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
