--- a/fotos.html
+++ b/fotos.html
@@ -43,7 +43,7 @@
     <main><br><br>
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/3.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo-ini.jpg?raw=true" class="foto" width="360" height="270">
-        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/5.jpg?raw=true" class="foto" width="360" height="270"><br>
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" class="foto" width="360" height="270"><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AaffwQZQjC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/9.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/2.jpg?raw=true" class="foto" width="360" height="270">
