--- a/Localização.html
+++ b/Localização.html
@@ -14,7 +14,7 @@
   <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
+            <a href="/frontpage.html"><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px"></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
@@ -46,11 +46,11 @@
             <div class="col span_1_of_2">
                 <h1>Contactos</h1>
                 <div>
-                    <a href="tel: +351 962898982" <p></p><img src="https://i.pinimg.com/originals/e1/ea/24/e1ea24a7d8bc39064780531cd1a9718b.jpg" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
+                    <a href="tel: +351 962898982" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/telefone.png?raw=true" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
                     </a>
-                    <a href="mailto:joaopaulo@boemio.pt" <p></p><img src="https://lh3.googleusercontent.com/F_Ui2IQGRdBThXZlW7KnTxMmaOZJm_3kvd5OFT_J7TwEYmDUO3GibapgtM4TiL9KRTg-IhR9SZXWJcgz9slpkf_Iczt4hbAcRZPsMNQGYE648HWfzViVJ-yxLlXdkqKcQ1nVUkZs9xM7TWtDGtQY3AmpriYUytu6bnMxvtBaHWQsOqJ960Q7O7yy2QEDI5xXd7YWxlV-LBC1wAE0amOHivXrPfy8Q8W_xLkFiwqLcZXj6tzh2QqmRVSnHFn2llJZbG--UoVSV20fSmWiQsskDiGR9_vxv_RRC9xJndwVqNIHZY1UZ0lvubpxZoJaSp24tLLV3VhSpsyUl9rZ3c6sjqX-3Wn_p8jOQ2z1IdgHNGkuTEt1-1xYuCYu6ece4Gi85tMbYbkcnYMfJcjEL_6_PrSVvG-6go_eLu0tgg_fBfR0njuyPe2Y8tL94itESElYBwsX8OjEjyNOpFDRkdZCPOpCEz1n7JB_qepZhx3QUJO_y0ZGn-a8G0CIuioHeIaP7DfrWHV91IHzQw9VcekBaiIs1mGXxypgpG__4GlGFJpXXeHjUuhKkmhzoK78rgcDzDVYFxKgeZo59Y42ne3NoV5lbbUXfq3VbuGp3cZnOrFYgMSWpxa6DHOTLgffN_bmac4J_9P-_oM2wO9--7U0AWeXvfn0qsrzik3OS6ANcbgiUpIymT7ymc_HlQBo1VHAc7EfoIh4YcI-Oic7BGmwMHY=w434-h281-no?authuser=0" height="25px" style="margin-right: 15px;" width="30px">joaopaulo@boemio.pt</p>
+                    <a href="mailto:joaopaulo@boemio.pt" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/email.png?raw=true" height="25px" style="margin-right: 15px;" width="30px">joaopaulo@boemio.pt</p>
                     </a>
-                    <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank" <p></p><img src="https://lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" height="25px" style="margin-right: 15px;" width="25px">Facebook/Boémio Bar & Tapas</p>
+                    <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/20673.png?raw=true" width="25px">Facebook/Boémio Bar & Tapas</p>
                     </a>
                     <br>
 
@@ -64,7 +64,7 @@
 
             <div class="col span_1_of_2">
                 <h1>Localização</h1>
-                <a href="https://www.google.pt/maps/place/Rua+dos+Pescadores+10,+8950-411+Altura/@37.1727565,-7.4996594,20z/data=!4m5!3m4!1s0xd1019138faf6f53:0x570bdf2dddbd9ac3!8m2!3d37.1727007!4d-7.4995536" target="_blank" <p></p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsPRiESBXhBXJmFMc6QaPleeyN2JjtAhutDe4KZ2Mhgq9yrQupE4YvoSO63Nn-Yi1YWCY&usqp=CAU" height="25px" style="margin-right: 15px;" width="25px">Rua dos Pescadores nº10- Alagoa Altura 8950-417 Alagoa</p>
+                <a href="https://www.google.pt/maps/place/Rua+dos+Pescadores+10,+8950-411+Altura/@37.1727565,-7.4996594,20z/data=!4m5!3m4!1s0xd1019138faf6f53:0x570bdf2dddbd9ac3!8m2!3d37.1727007!4d-7.4995536" target="_blank" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/alfinete.png?raw=true" height="25px" style="margin-right: 15px;" width="25px">Rua dos Pescadores nº10- Alagoa Altura 8950-417 Alagoa</p>
                 </a><br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.7536523540847!2d-7.499635123490184!3d37.17278791418816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1019138faf6f53%3A0x570bdf2dddbd9ac3!2sRua%20dos%20Pescadores%2010%2C%208950-411%20Altura!5e0!3m2!1spt-PT!2spt!4v1622736318437!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
