--- a/frontpage.html
+++ b/frontpage.html
@@ -10,6 +10,7 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 
 <head>
+    <title>Boemio Bar & tapas</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
