--- a/fotos.html
+++ b/fotos.html
@@ -53,7 +53,7 @@
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/4.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/10.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/11.jpg?raw=true" class="foto" width="360" height="270">
-
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/12.jpg?raw=true" class="foto" width="360" height="270">
 
         <br><br><br>
     </main>
