--- a/frontpage.html
+++ b/frontpage.html
@@ -44,20 +44,18 @@
 
         <div id="text" style="float: left;">
             <a href="/menu.html" style="text-decoration:none">
-                <button class="botão ">Menu</button></div>
+                <button class="botão "><h1>Menu</h1></button></div>
         </a>
         <div id="text " style="float: left; ">
-            <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
+            <a href="/fotos.html " style="text-decoration:none"><button class="botão "><h1>Fotos e Videos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
-            <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
+            <a href="/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">...............</h1>
         </div>
-        <div id="image" style="float:left;">
-            <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank"><img class="facebook" src="//lh3.googleusercontent.com/lWMD9297n9DJSBAYQx3m7HQ4cjl8J_FtCUjAiO196Y7kCItZICFQxD0e6VnKnOHeIm-C6Q=s85" align="right" height="55" width="55" /></a>
-        </div>
+        
     </header>
     <p><br><br><br><br></p>
     <main>
