--- a/fotos.html
+++ b/fotos.html
@@ -22,13 +22,13 @@
 
         <div id="text" style="float: left;">
             <a href="/menu.html" style="text-decoration:none">
-                <button class="botão ">Menu</button></div>
+                <button class="botão "><h1>Menu</h1></button></div>
         </a>
         <div id="text " style="float: left; ">
-            <a href="/fotos.html " style="text-decoration:none"><button class="botão ">Fotos e Videos</button></a>
+            <a href="/fotos.html " style="text-decoration:none"><button class="botão2 "><h1>Fotos e Videos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
-            <a href="/Localização.html" style="text-decoration:none"><button class="botão" >Localização e contactos</button></a>
+            <a href="/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">...............</h1>
