--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
  <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="//lh3.googleusercontent.com/lLYlGDCSgIQid7oLXMZm-tv9jPZufKIzjX7T7zT8bZCSqSnkeXwnCLO8RAH1uYgVjo5Y_A=s170" align="left" height="60px" width="165px" /></a>
+            <a href="/frontpage.html"><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px" /></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
