--- a/frontpage.html
+++ b/frontpage.html
@@ -58,7 +58,7 @@
         
     </header>
     <p><br><br><br><br></p>
-    <main class="maim>
+    <main >
         <br>
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_white.png?raw=true">
         <h1>Temos serviço de pequeno almoço, servimos cocktails, tostas, hamburgers, tapas. <br>Muita diversão num bom ambiente<br><br></h1>
