--- a/Localização.html
+++ b/Localização.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="end">
-            <h1 class="endt"><br><br>Esperamos a sua vistita &#128516<br><br><br></h1>
+            <h1 class="endt"><br><br>Esperamos a sua visita &#128516<br><br><br></h1>
             <br>
 
         </div>
