--- a/profile/mail.html
+++ b/profile/mail.html
@@ -1,36 +1,15 @@
 <html>
-    <script src="https://smtpjs.com/v3/smtp.js" ></script>
-    <script  >
-        $('#contact-form').submit(function(e){
-        var name=document.getElementById('name'),
-        email=document.getElementById('email'),
-        assunto=document.getElementById('assunto'),
-        message=document.getElementById('message');
-        if(!name.value || !email.value||!assunto.value||!message.value){
-            alrtify.error('Please check your entries')
-        }else{
-        Email.send({
-            SecureToken:"dd3b72c8-a558-4c2b-9b66-21f1c87c3e89" ,
-            To:"gbarradas1@hotmail.com",
-            From:email.value,
-            Subject:"MyGitHub: "+assunto.vaule,
-            Body:message.value,
-
-        }).then();
-        }
-    })
-    </script>
+    
     <meta name="author" content="Gonçalo Barradas">
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
     <head>
         <title>Email</title>
         <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/GBarradas/Gbarradas.github.io/main/profile/mail.css">
-        <script src="/js/email.js"></script>
     </head>
     <body>
         <div class="container">
             <div class="container-inside">
-                <h1 class="tittle"><b>Send me a email</b></h1>
+                <h1 class="tittle"><b>Send me a email</b><br>Not working.</h1>
                 <form class="contact-form">
                     <div>
                         <label class="label" for="name" >Name:</label>
