--- a/listageres.html
+++ b/listageres.html
@@ -22,9 +22,13 @@
           <li>Ezequiel Fernandes, Maria Rosa Fernandes,</li>
           <li>Antonio Evaristo, Maria da Conçeição;</li>
           <li>José Brito, Ana Brito;</li>
+          <li><strong class="needname">Antonio, Rosa;</strong></li>
+          <li><strongclass="needname">Toy,Mulher</strong></li>
           <li>Mário Domingos, Madalena Domingos;</li>
           <li>Filomena Batista, Vitoria Gerreiro;</li>
           <li>Marcelino Barradas, Custodia Barradas;</li>
+          <li><strongclass="needname">Vitor Gato,Mulher</strong></li>
+          <li>Ana Rita, <strong class="needname">Cezaltina -----</strong>;</li>
           <li>Manuel Viegas, Maria Jose;</li>
           <li>Carlos Cadeias, Fatima Cadeias;</li>
           <li>Lazarina Fernandes, Maria Valente ;</li>
@@ -32,8 +36,6 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
-            <li>Ana Rita, <strong>Cezaltina -----</strong>;</li>
-          <li><strong>Toy,Mulher</strong></li>
       </ul>
     </body>
 </html>
