--- a/listageres.html
+++ b/listageres.html
@@ -19,11 +19,11 @@
           <li>Rita Simão, Eduardo Simão,Rita Ribeiro;</li>
           <li>Manuel Vieira, Odile Vieira;</li>
           <li>Fernando Brito, Eduarda Brito;</li>
-          <li>Ezequiel Fernandes, Maria Rosa Fernandes,</li>
+          <li>Ezequiel Fernandes, Maria Rosa Fernandes;</li>
           <li>Antonio Evaristo, Maria da Conçeição;</li>
           <li>José Brito, Ana Brito;</li>
           <li><strong class="needname">Antonio, Rosa;</strong></li>
-          <li><strongclass="needname">Toy,Mulher</strong></li>
+          <li><strong class="needname">Toy,Mulher</strong></li>
           <li>Mário Domingos, Madalena Domingos;</li>
           <li>Filomena Batista, Vitoria Gerreiro;</li>
           <li>Marcelino Barradas, Custodia Barradas;</li>
