--- a/listageres.html
+++ b/listageres.html
@@ -4,7 +4,7 @@
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
     <head>
         <title>Lista Geres</title>
-        <link rel="stylesheet" type="text/css" href="/css/mail.css">
+        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/GBarradas/Gbarradas.github.io/main/profile/mail.css">
         <script src="/js/email.js"></script>
     </head>
     <body>
