--- a/listageres.html
+++ b/listageres.html
@@ -23,7 +23,7 @@
           <li>Antonio Evaristo, Maria da Conçeição;</li>
           <li>José Brito, Ana Brito;</li>
           <li><strong class="needname">Antonio, Rosa;</strong></li>
-          <li><strong class="needname">Toy,Mulher</strong></li>
+          <li><strong class="needname">Toy,Mulher;</strong></li>
           <li>Mário Domingos, Madalena Domingos;</li>
           <li>Filomena Batista, Vitoria Gerreiro;</li>
           <li>Marcelino Barradas, Custodia Barradas;</li>
