--- a/listageres.html
+++ b/listageres.html
@@ -23,12 +23,12 @@
           <li>Antonio Evaristo, Maria da Conçeição;</li>
           <li>José Brito, Ana Brito;</li>
           <li><strong class="needname">Antonio, Rosa;</strong></li>
-          <li><strong class="needname">Toy,Mulher;</strong></li>
+          <li><strong class="needname">Toy, Mulher;</strong></li>
           <li>Mário Domingos, Madalena Domingos;</li>
           <li>Filomena Batista, Vitoria Gerreiro;</li>
           <li>Marcelino Barradas, Custodia Barradas;</li>
           <li><strongclass="needname">Vitor Gato,Mulher</strong></li>
-          <li>Ana Rita, <strong class="needname">Cezaltina -----</strong>;</li>
+          <li>Ana Rita, <strong class="needname">Cezaltina </strong>;</li>
           <li>Manuel Viegas, Maria Jose;</li>
           <li>Carlos Cadeias, Fatima Cadeias;</li>
           <li>Lazarina Fernandes, Maria Valente ;</li>
