--- a/listageres.html
+++ b/listageres.html
@@ -4,9 +4,23 @@
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
     <head>
         <title>Lista Geres</title>
-        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/GBarradas/Gbarradas.github.io/main/profile/mail.css">
         <script src="/js/email.js"></script>
+        <style>
+            body{
+                background-color: rgba(128, 128, 128, 0.281);
+            }
+            li{
+                font-size: large;
+            }
+        .needname{
+            background-color: red;
+        }
+        h1{
+            font-size: 50px;
+        }
+        </style>
     </head>
+    
     <body>
       <h1>Listas de Quartos</h1>
       <ul>
