--- a/listageres.html
+++ b/listageres.html
@@ -42,7 +42,7 @@
           <li>Filomena Batista, Vitoria Gerreiro;</li>
           <li>Marcelino Barradas, Custodia Barradas;</li>
           <li><strongclass="needname">Vitor Gato,Mulher</strong></li>
-          <li>Ana Rita, <strong class="needname">Cezaltina </strong>;</li>
+          <li>Ana Rita, Cesaltina Rosa;</li>
           <li>Manuel Viegas, Maria Jose;</li>
           <li>Carlos Cadeias, Fatima Cadeias;</li>
           <li>Lazarina Fernandes, Maria Valente ;</li>
