--- a/listageres.html
+++ b/listageres.html
@@ -50,6 +50,8 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
+          <li>Motorista 1</li>
+          <li>Motorista 2</li>
       </ul>
     </body>
 </html>
