--- a/listageres.html
+++ b/listageres.html
@@ -17,7 +17,9 @@
         }
         h1{
             font-size: 50px;
-        }
+        .moto{
+            background-color:Yellow;
+}
         </style>
     </head>
     
@@ -50,8 +52,8 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
-          <li>Motorista 1</li>
-          <li>Motorista 2</li>
+          <li class="moto">Motorista 1</li>
+          <li class="moto">Motorista 2</li>
       </ul>
     </body>
 </html>
