--- a/listageres.html
+++ b/listageres.html
@@ -18,7 +18,7 @@
         h1{
             font-size: 50px;
         .moto{
-            background-color:Yellow;
+            background-color: yellow;
 }
         </style>
     </head>
