--- a/listageres.html
+++ b/listageres.html
@@ -52,8 +52,8 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
-          <li><div class="needname moto">Motorista 1;</div></li>
-          <li><div class="needname moto">Motorista 2;</div></li>
+          <li><strong class="needname moto">Motorista 1;</strong></li>
+          <li><strong class="needname moto">Motorista 2;</strong></li>
       </ul>
     </body>
 </html>
