--- a/listageres.html
+++ b/listageres.html
@@ -17,9 +17,10 @@
         }
         h1{
             font-size: 50px;
+            }
         .moto{
-            background-color: green;!important
-}
+            background-color: green;
+        }
         </style>
     </head>
     
@@ -52,8 +53,8 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
-          <li><strong class="needname moto">Motorista 1;</strong></li>
-          <li><strong class="needname moto">Motorista 2;</strong></li>
+          <li><strong class="moto">Motorista 1;</strong></li>
+          <li><strong class="moto">Motorista 2;</strong></li>
       </ul>
     </body>
 </html>
