--- a/listageres.html
+++ b/listageres.html
@@ -39,7 +39,7 @@
           <li>Ezequiel Fernandes, Maria Rosa Fernandes;</li>
           <li>Antonio Evaristo, Maria da Conçeição;</li>
           <li>José Brito, Ana Brito;</li>
-          <li><strong class="needname">Antonio, Rosa;</strong></li>
+          <li>Anton Kranchov, Roza Kranchov;</li>
           <li><strong class="needname">Toy, Mulher;</strong></li>
           <li>Mário Domingos, Madalena Domingos;</li>
           <li>Filomena Batista, Vitoria Gerreiro;</li>
