--- a/listageres.html
+++ b/listageres.html
@@ -55,6 +55,11 @@
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
           <li><strong class="moto">Motorista 1;</strong></li>
           <li><strong class="moto">Motorista 2;</strong></li>
-      </ul>
+      </ul><br>
+        <h1>Lugares</h1>
+        <ol>
+            <li>Lugar 1: </li>
+        </ol>
+       
     </body>
 </html>
