--- a/listageres.html
+++ b/listageres.html
@@ -8,6 +8,7 @@
         <style>
             body{
                 background-color: rgba(128, 128, 128, 0.281);
+                 padding-left: 2%;
             }
             li{
                 font-size: large;
