--- a/listageres.html
+++ b/listageres.html
@@ -34,7 +34,7 @@
           <li>José Santos, Manuela Santos;</li>
           <li>Lucia Valentim, Maria Irene Valentim;</li>
           <li>Jorge Vitorino, Clotilde Vitorino;</li>
-          <li>José Manchado, Idalina Machado;</li>
+          <li>José Machado, Idalina Machado;</li>
           <li>Rita Simão, Eduardo Simão,Rita Ribeiro;</li>
           <li>Manuel Vieira, Odile Vieira;</li>
           <li>Fernando Brito, Eduarda Brito;</li>
