--- a/listageres.html
+++ b/listageres.html
@@ -55,7 +55,7 @@
           <li>Hélder Mangas, Anabela Rodrigues;</li>
           <li>Manuel Machado, Maria Lurdes;</li>
           <li>Custodio Justo, Maria Jacinta do Rosário;</li>
-          <li>Ricardo Barradas(Organizador)</li>
+          <li>Ricardo Barradas <strong>(Organizador);</strong></li>
           <li><strong class="moto">Motorista 1;</strong></li>
           <li><strong class="moto">Motorista 2;</strong></li>
       </ul><br>
