--- a/listageres.html
+++ b/listageres.html
@@ -58,12 +58,13 @@
           <li>Ricardo Barradas <strong>(Organizador);</strong></li>
           <li><strong class="moto">Motorista 1;</strong></li>
           <li><strong class="moto">Motorista 2;</strong></li>
-      </ul><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </ul><!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
+        <img src="file:///home/goncalo/Desktop/Ficheiros/Pai/Autocarro%2055.pdf" class="pdf" width="360" height="270">
         <h1>Lugares</h1>
         <ol>
             <li></li>
             <li></li>
-            <li></li>
+            <li>Ricardo Barradas</li>
             <li>Guia</li>
             <li></li>
             <li></li>
