--- a/listageres.html
+++ b/listageres.html
@@ -59,7 +59,7 @@
           <li><strong class="moto">Motorista 1;</strong></li>
           <li><strong class="moto">Motorista 2;</strong></li>
       </ul><!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
-        <img src="file:///home/goncalo/Desktop/Ficheiros/Pai/Autocarro%2055.pdf" class="pdf" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/carro%2055.PNG?raw=true" class="pdf" width="360" height="270">
         <h1>Lugares</h1>
         <ol>
             <li></li>
