--- a/listageres.html
+++ b/listageres.html
@@ -58,7 +58,8 @@
           <li>Ricardo Barradas <strong>(Organizador);</strong></li>
           <li><strong class="moto">Motorista 1;</strong></li>
           <li><strong class="moto">Motorista 2;</strong></li>
-      </ul><!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
+      </ul><!--<br><br><br><br><br><br><br><br><br><br><br>--><br><br><br>
+        <h1>Planta do Autocarro</h1>
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/carro%2055.PNG?raw=true" class="pdf" width="360" height="270">
         <h1>Lugares</h1>
         <ol>
