--- a/listageres.html
+++ b/listageres.html
@@ -60,7 +60,7 @@
           <li><strong class="moto">Motorista 2;</strong></li>
       </ul><!--<br><br><br><br><br><br><br><br><br><br><br>--><br><br><br>
         <h1>Planta do Autocarro</h1>
-        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/carro%2055.PNG?raw=true" class="pdf" width="360" height="270">
+        <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/carro%2055.PNG?raw=true" class="pdf"  height="170%">
         <h1>Lugares</h1>
         <ol>
             <li></li>
