--- a/UE/Praxes/Patricia.html
+++ b/UE/Praxes/Patricia.html
@@ -7,6 +7,6 @@
     <body>
         <br><br><br><br><br><br>
         <div class ="box">
-       <h1 class="pergunta">Sr. Estudante Patricia Gatinho aceita ser minha Pseudo-Madrinha???</h1></div>
+       <h1 class="pergunta">Sra. Estudante Patricia Gatinho aceita ser minha Pseudo-Madrinha???</h1></div>
         </body>
 </html>
